# ants

./: .gitignore  README.md  pyproject.toml
src/ants/: __init__.py  core.py  utils.py
